exercises/manifests/deployment_greeter-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-depl-v2
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeter
      version: v2
  template:
    metadata:
      labels:
        app: greeter
        version: v2
    spec:
      containers:
      - name: greeter
        image: PROJECT/IMAGE_GRE
        readinessProbe:
          initialDelaySeconds: 15 # Initial delay until the readiness is tested
          periodSeconds: 15 # How often to test
          httpGet:
            path: /healthz
            port: 5000
        ports:
        - containerPort: 5000
