exercises/manifests/deployment_pong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-app-depl
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong-app
  template:
    metadata:
      labels:
        app: ping-pong-app
    spec:
      containers:
      - name: ping-pong-app
        image: skinatro/ping-pong-app:latest
        ports:
          - containerPort: 5000
