exercises/manifests/service_greeter-frontdoor.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: greeter
  ports:
    - name: http
      port: 80
      targetPort: 5000
