exercises/manifests/service_greeter-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc-v1
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: greeter
    version: v1
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5000
