exercises/manifests/service_greeter-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc-v2
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: greeter
    version: v2
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5000
