exercises/manifests/gateway-istio.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: exercises-gateway
  namespace: exercises
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
